--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@okta/okta-signin-widget": "^4.1.2",
     "antd": "^4.4.3",
     "axios": "^0.19.2",
+    "babel-jest": "^24.9.0",
     "craco-less": "^1.17.0",
     "plotly.js": "^1.54.6",
     "react": "^16.13.1",
@@ -19,8 +20,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+   "start": "craco --max_old_space_size=4096 start",
+    "build": "craco --max_old_space_size=4096 build",
     "test": "craco test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
